# files_structures_module

./: .gitignore  CMakeLists.txt  deque.py  gitignore  linked _list.py
basics_numy/: intro.ipynb
ds_docs/: bytarray.py  list.py
sequential_structures/: dichotomic_search  dichotomic_search.C  dichotomic_search.py
sequential_structures/TDs/TD3/: exo1  exo1.c
sequential_structures/TOF/C/main/: model.h  tof_functions.c
